# AdventOfCode2022

./: Cargo.toml  README.md
.github/workflows/: rust.yml
.utils/: newDay.sh
src/: lib.rs
src/solutions/: day.rs  day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
