[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner-derive = "0.3.0"
aoc-runner = "0.3.0"
itertools = "0.7.8"
lazy_static = "1.4.0"
num = "0.1.42"
regex = "1.5.4"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0"